--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.4);
     }
 
+    .contact-soft {
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+    }
+
     .hero img {
       width: 100%;
       border-radius: var(--radius);
@@ -169,7 +173,7 @@
     </div>
 
     <!-- CONTACT CARD -->
-    <div id="contact" class="card" style="margin-top:40px;">
+    <div id="contact" class="card contact-soft" style="margin-top:40px;">
       <h2>Contact</h2>
       <div class="grid">
         <div class="card option">🐦 <strong>X (Twitter)</strong></div>
@@ -188,6 +192,7 @@
         <div class="card option">
           <h3>TryHackMe Write-ups</h3>
           <p>Completed rooms and methodologies.</p>
+          <a href="writeups/thm-sample.html">Open Write-up →</a>
         </div>
         <div class="card option">
           <h3>Hack The Box Write-ups</h3>
