--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="card option">
           <h3>TryHackMe Write-ups</h3>
           <p>Completed rooms and methodologies.</p>
-          <a href="writeups/thm-sample.html">Open Write-up →</a>
+          <a href="PassCode/thm-sample.html">Open Write-up →</a>
         </div>
         <div class="card option">
           <h3>Hack The Box Write-ups</h3>
