--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </div>
 
       <div class="card">
-        <img src="profile.jpg" alt="Profile Image" />
+        <img src="assets/images/ali.png" alt="Profile Image" />
       </div>
     </div>
 
