--- a/index.html
+++ b/index.html
@@ -1,266 +1,236 @@
+<!-- =========================
+ MAIN PAGE : index.html
+ Dark Portfolio – Responsive
+ Everything (CSS + JS) inline
+========================= -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cybersecurity Portfolio</title>
+  <title>My Cybersecurity Portfolio</title>
 
-  <!-- Embedded CSS -->
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <style>
     :root {
-      --bg: #0e0f13;
-      --card: #151823;
-      --card-soft: rgba(255,255,255,0.04);
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --accent: #22d3ee;
-      --radius: 18px;
+      --bg: #0b0f14;
+      --card: #121824;
+      --soft: #1a2233;
+      --accent: #4da3ff;
+      --text: #e6e9ef;
+      --muted: #9aa4b2;
     }
 
-    * { box-sizing: border-box; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background: radial-gradient(circle at top, #151823, var(--bg));
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: var(--bg);
       color: var(--text);
+      line-height: 1.6;
     }
 
-    a { color: inherit; text-decoration: none; }
+    a { text-decoration: none; color: inherit; }
 
+    /* ================= HEADER ================= */
     header {
-      padding: 24px 40px;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      background: rgba(11,15,20,.9);
+      backdrop-filter: blur(8px);
+      border-bottom: 1px solid #1f2635;
+    }
+
+    .nav {
+      max-width: 1200px;
+      margin: auto;
+      padding: 16px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
-    nav a {
-      margin-left: 20px;
-      color: var(--muted);
+    .nav ul {
+      display: flex;
+      gap: 22px;
+      list-style: none;
+    }
+
+    .nav a {
       font-size: 14px;
-    }
-
-    nav a:hover { color: var(--accent); }
-
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 20px;
-    }
-
-    .hero {
-      display: grid;
-      grid-template-columns: 1fr 280px;
-      gap: 30px;
-      margin-top: 40px;
-    }
-
-    .card {
-      background: linear-gradient(180deg, var(--card), var(--card-soft));
-      border-radius: var(--radius);
-      padding: 24px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-    }
-
-    .contact-soft {
-      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
-    }
-
-    .hero img {
-      width: 100%;
-      border-radius: var(--radius);
-    }
-
-    h1 {
-      margin-top: 0;
-      font-size: 32px;
-    }
-
-    h2 {
-      font-size: 20px;
-      margin-bottom: 12px;
-    }
-
-    p {
-      line-height: 1.6;
       color: var(--muted);
     }
 
-    .tags span {
-      display: inline-block;
-      background: rgba(34,211,238,0.12);
-      color: var(--accent);
-      padding: 6px 12px;
-      border-radius: 999px;
-      font-size: 12px;
-      margin: 4px 4px 0 0;
+    .nav a:hover { color: var(--text); }
+
+    /* ================= HERO ================= */
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 20px;
     }
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
+      grid-template-columns: 1.2fr 1fr;
+      gap: 24px;
     }
 
-    .option {
-      cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.2s;
+    .card {
+      background: linear-gradient(180deg, #121824, #0f1420);
+      border-radius: 18px;
+      padding: 28px;
+      box-shadow: 0 15px 40px rgba(0,0,0,.45);
     }
 
-    .option:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 15px 40px rgba(0,0,0,0.6);
+    .about h1 {
+      font-size: 34px;
+      margin-bottom: 12px;
     }
 
-    footer {
-      margin-top: 60px;
-      padding: 30px 0;
-      text-align: center;
+    .about p {
       color: var(--muted);
-      font-size: 14px;
+      font-size: 15px;
+    }
+
+    /* ================= IMAGE ================= */
+    .image-box {
+      padding: 0;
+      overflow: hidden;
+    }
+
+    .image-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    /* ================= SOCIAL ================= */
+    .social {
+      margin-top: 24px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 14px;
     }
 
     .social a {
-      margin: 0 10px;
-      font-size: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 14px;
+      border-radius: 12px;
+      background: rgba(255,255,255,.03);
+      border: 1px solid rgba(255,255,255,.08);
+      font-size: 14px;
+      color: var(--muted);
+      transition: .2s;
+    }
+
+    .social a:hover {
+      color: var(--text);
+      border-color: var(--accent);
+      transform: translateY(-2px);
+    }
+
+    /* ================= WRITEUPS ================= */
+    .writeups {
+      margin-top: 40px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+    }
+
+    .writeup-card {
+      padding: 26px;
+      border-radius: 16px;
+      background: linear-gradient(180deg, #141b2d, #0f1420);
+      border: 1px solid #1f2635;
+      transition: .25s;
+    }
+
+    .writeup-card:hover {
+      transform: translateY(-6px);
+      border-color: var(--accent);
+    }
+
+    .writeup-card h3 {
+      margin-bottom: 10px;
+      font-size: 18px;
+    }
+
+    .writeup-card p {
+      font-size: 14px;
       color: var(--muted);
     }
 
-    .social a:hover { color: var(--accent); }
-
-    /* simple page switching */
-    .page { display: none; }
-    .page.active { display: block; }
+    /* ================= RESPONSIVE ================= */
+    @media (max-width: 900px) {
+      .grid { grid-template-columns: 1fr; }
+      .writeups { grid-template-columns: 1fr; }
+      .social { grid-template-columns: 1fr 1fr; }
+    }
   </style>
 </head>
 <body>
 
 <header>
-  <strong>Aladeb | Cybersecurity</strong>
-  <nav>
-    <a href="#" onclick="showPage('home')">Home</a>
-    <a href="#" onclick="showPage('about')">About</a>
-    <a href="#" onclick="showPage('writeups')">Write-ups</a>
-    <a href="#contact" onclick="scrollToContact()">Contact</a>
+  <nav class="nav">
+    <strong>MyPortfolio</strong>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#writeups">Write-ups</a></li>
+    </ul>
   </nav>
 </header>
 
-<div class="container">
+<main class="container">
 
-  <!-- HOME -->
-  <section id="home" class="page active">
-    <div class="hero">
-      <div class="card">
-        <h1>Penetration Tester</h1>
-        <p>
-          Cybersecurity enthusiast focused on penetration testing, red teaming,
-          and practical labs. I document my learning journey through real-world
-          simulations and write-ups.
-        </p>
-        <div class="tags">
-          <span>Penetration Testing</span>
-          <span>TryHackMe</span>
-          <span>Hack The Box</span>
-          <span>Linux</span>
-        </div>
-      </div>
+  <section class="grid" id="about">
+    <div class="card about">
+      <h1>Cybersecurity & Pentesting</h1>
+      <p>
+        Passionate about penetration testing, CTFs, and real-world attack simulations.
+        This site documents my learning journey, labs, and technical write-ups.
+      </p>
 
-      <div class="card">
-        <img src="assets/images/ali.png" alt="Profile Image" />
+      <div class="social" id="contact">
+        <a href="#"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+        <a href="#"><i class="fa-brands fa-x-twitter"></i> X / Twitter</a>
+        <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href="#"><i class="fa-brands fa-youtube"></i> YouTube</a>
+        <a href="#"><i class="fa-solid fa-cube"></i> Hack The Box</a>
+        <a href="#"><i class="fa-solid fa-terminal"></i> TryHackMe</a>
       </div>
     </div>
 
-    <!-- CONTACT CARD -->
-    <div id="contact" class="card contact-soft" style="margin-top:40px;">
-      <h2>Contact</h2>
-      <div class="grid">
-        <div class="card option">🐦 <strong>X (Twitter)</strong></div>
-        <div class="card option">📸 <strong>Instagram</strong></div>
-        <div class="card option">▶️ <strong>YouTube</strong></div>
-        <div class="card option">💼 <strong>LinkedIn</strong></div>
-        <div class="card option">🟢 <strong>TryHackMe</strong></div>
-        <div class="card option">⬛ <strong>Hack The Box</strong></div>
-      </div>
-    </div>
-
-    <!-- ACHIEVEMENTS -->
-    <div class="card" style="margin-top:40px;">
-      <h2>Labs & Achievements</h2>
-      <div class="grid">
-        <div class="card option">
-          <h3>TryHackMe Write-ups</h3>
-          <p>Completed rooms and methodologies.</p>
-          <a href="PassCode/PassCode.html">Open Write-up →</a>
-        </div>
-        <div class="card option">
-          <h3>Hack The Box Write-ups</h3>
-          <p>Machines, privilege escalation and exploits.</p>
-        </div>
-        <div class="card option">
-          <h3>General Challenges</h3>
-          <p>CTFs, notes, and personal research.</p>
-        </div>
-      </div>
+    <div class="card image-box">
+      <img src="profile.jpg" alt="Profile Image" />
     </div>
   </section>
 
-  <!-- WRITEUPS -->
-  <section id="writeups" class="page">
-    <h2>Write-ups</h2>
-    <div class="grid">
-      <div class="card option">
-        <h3>TryHackMe</h3>
-        <p>Detailed room write-ups and methodologies.</p>
-        <a href="#">View Write-ups →</a>
-      </div>
-      <div class="card option">
-        <h3>Hack The Box</h3>
-        <p>Machines, challenges, and exploitation flow.</p>
-        <a href="#">View Write-ups →</a>
-      </div>
-    </div>
+  <section class="writeups" id="writeups">
+    <a href="writeups.html" class="writeup-card">
+      <h3>TryHackMe Write-ups</h3>
+      <p>Room solutions, methodology, and learning notes.</p>
+    </a>
+
+    <a href="writeups.html" class="writeup-card">
+      <h3>Hack The Box Write-ups</h3>
+      <p>Machines, challenges, and exploitation paths.</p>
+    </a>
+
+    <a href="writeups.html" class="writeup-card">
+      <h3>General Write-ups</h3>
+      <p>Notes, research, and security concepts.</p>
+    </a>
   </section>
 
-  <!-- LABS -->
-  <section id="labs" class="page">
-    <h2>Labs & Rooms</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Active Machines</h3>
-        <p>Currently working on advanced boxes.</p>
-      </div>
-      <div class="card">
-        <h3>Completed Rooms</h3>
-        <p>Collection of solved labs and techniques.</p>
-      </div>
-    </div>
-  </section>
-
-</div>
-
-<footer>
-  <div class="social">
-    <a href="#">🐙</a>
-    <a href="#">💼</a>
-    <a href="#">🐦</a>
-  </div>
-  <p>© 2026 Aladeb Ahmad</p>
-</footer>
-
-<!-- Embedded JavaScript -->
-<script>
-  function showPage(id) {
-    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-  }
-
-  function scrollToContact() {
-    const el = document.getElementById('contact');
-    if (el) el.scrollIntoView({ behavior: 'smooth' });
-  }
-</script>
+</main>
 
 </body>
 </html>
