--- a/index.html
+++ b/index.html
@@ -1,236 +1,207 @@
-<!-- =========================
- MAIN PAGE : index.html
- Dark Portfolio – Responsive
- Everything (CSS + JS) inline
-========================= -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Cybersecurity Portfolio</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Aladeb Ahmad | Red Team & Pentester</title>
 
-  <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+<!-- Font Awesome Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-  <style>
-    :root {
-      --bg: #0b0f14;
-      --card: #121824;
-      --soft: #1a2233;
-      --accent: #4da3ff;
-      --text: #e6e9ef;
-      --muted: #9aa4b2;
-    }
+<style>
+* { box-sizing: border-box; margin: 0; padding: 0; }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: #0f172a;
+  color: #e5e7eb;
+  line-height: 1.6;
+}
+a { text-decoration: none; color: inherit; }
 
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+/* ===== Header ===== */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 8%;
+  position: sticky;
+  top: 0;
+  background: rgba(15,23,42,0.95);
+  z-index: 100;
+}
+header h1 { font-size: 1.4rem; color: #38bdf8; }
+nav a {
+  margin-left: 25px;
+  font-weight: 500;
+  cursor: pointer;
+}
+nav a:hover { color: #38bdf8; }
 
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
+/* ===== Sections ===== */
+section { padding: 70px 8%; }
 
-    a { text-decoration: none; color: inherit; }
+/* ===== Hero / About ===== */
+#about {
+  display: grid;
+  grid-template-columns: 280px 1fr;
+  gap: 40px;
+  align-items: center;
+}
 
-    /* ================= HEADER ================= */
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background: rgba(11,15,20,.9);
-      backdrop-filter: blur(8px);
-      border-bottom: 1px solid #1f2635;
-    }
+.profile-img {
+  width: 280px;
+  height: 280px;
+  overflow: hidden;
+  border-radius: 12px;
+}
+.profile-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-    .nav {
-      max-width: 1200px;
-      margin: auto;
-      padding: 16px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+.about-box {
+  background: #020617;
+  padding: 30px;
+  border-radius: 12px;
+}
+.about-box h2 { color: #38bdf8; margin-bottom: 10px; }
+.about-box p { margin-bottom: 15px; }
 
-    .nav ul {
-      display: flex;
-      gap: 22px;
-      list-style: none;
-    }
+/* ===== Tags ===== */
+.tags span {
+  display: inline-block;
+  background: #052e16;
+  color: #22c55e;
+  padding: 6px 12px;
+  border-radius: 20px;
+  margin: 5px 6px 0 0;
+  font-size: 0.85rem;
+}
 
-    .nav a {
-      font-size: 14px;
-      color: var(--muted);
-    }
+/* ===== Social Icons ===== */
+.social-icons {
+  margin-top: 20px;
+  display: flex;
+  gap: 18px;
+}
+.social-icons a {
+  font-size: 1.6rem;
+}
+.social-icons a:hover { transform: scale(1.1); }
 
-    .nav a:hover { color: var(--text); }
+.fa-github { color: #e5e7eb; }
+.fa-linkedin { color: #0a66c2; }
+.fa-twitter { color: #1da1f2; }
+.fa-instagram { color: #e1306c; }
+.fa-telegram { color: #229ed9; }
 
-    /* ================= HERO ================= */
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 40px 20px;
-    }
+/* ===== Labs / Writeups ===== */
+#labs .cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 25px;
+}
+.card {
+  background: #020617;
+  padding: 30px;
+  border-radius: 14px;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.card:hover { transform: translateY(-6px); }
+.card h3 { color: #38bdf8; margin-bottom: 10px; }
 
-    .grid {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 24px;
-    }
+/* ===== Contact ===== */
+#contact { text-align: center; }
+#contact h2 { color: #38bdf8; margin-bottom: 20px; }
 
-    .card {
-      background: linear-gradient(180deg, #121824, #0f1420);
-      border-radius: 18px;
-      padding: 28px;
-      box-shadow: 0 15px 40px rgba(0,0,0,.45);
-    }
-
-    .about h1 {
-      font-size: 34px;
-      margin-bottom: 12px;
-    }
-
-    .about p {
-      color: var(--muted);
-      font-size: 15px;
-    }
-
-    /* ================= IMAGE ================= */
-    .image-box {
-      padding: 0;
-      overflow: hidden;
-    }
-
-    .image-box img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    /* ================= SOCIAL ================= */
-    .social {
-      margin-top: 24px;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px;
-    }
-
-    .social a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding: 14px;
-      border-radius: 12px;
-      background: rgba(255,255,255,.03);
-      border: 1px solid rgba(255,255,255,.08);
-      font-size: 14px;
-      color: var(--muted);
-      transition: .2s;
-    }
-
-    .social a:hover {
-      color: var(--text);
-      border-color: var(--accent);
-      transform: translateY(-2px);
-    }
-
-    /* ================= WRITEUPS ================= */
-    .writeups {
-      margin-top: 40px;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-    }
-
-    .writeup-card {
-      padding: 26px;
-      border-radius: 16px;
-      background: linear-gradient(180deg, #141b2d, #0f1420);
-      border: 1px solid #1f2635;
-      transition: .25s;
-    }
-
-    .writeup-card:hover {
-      transform: translateY(-6px);
-      border-color: var(--accent);
-    }
-
-    .writeup-card h3 {
-      margin-bottom: 10px;
-      font-size: 18px;
-    }
-
-    .writeup-card p {
-      font-size: 14px;
-      color: var(--muted);
-    }
-
-    /* ================= RESPONSIVE ================= */
-    @media (max-width: 900px) {
-      .grid { grid-template-columns: 1fr; }
-      .writeups { grid-template-columns: 1fr; }
-      .social { grid-template-columns: 1fr 1fr; }
-    }
-  </style>
+/* ===== Responsive ===== */
+@media (max-width: 768px) {
+  #about {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .profile-img { margin: 0 auto; }
+  .social-icons { justify-content: center; }
+}
+</style>
 </head>
 <body>
 
 <header>
-  <nav class="nav">
-    <strong>MyPortfolio</strong>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#writeups">Write-ups</a></li>
-    </ul>
+  <h1>Aladeb Ahmad</h1>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#labs">Labs</a>
+    <a href="#contact">Contact</a>
   </nav>
 </header>
 
-<main class="container">
+<!-- ===== About Section ===== -->
+<section id="about">
+  <div class="profile-img">
+    <img src="profile.jpg" alt="Profile Image" />
+  </div>
 
-  <section class="grid" id="about">
-    <div class="card about">
-      <h1>Cybersecurity & Pentesting</h1>
-      <p>
-        Passionate about penetration testing, CTFs, and real-world attack simulations.
-        This site documents my learning journey, labs, and technical write-ups.
-      </p>
+  <div class="about-box">
+    <h2>Red Team & Penetration Tester</h2>
+    <p>
+      Offensive security practitioner focused on real‑world penetration testing and adversary simulation.
+      Ranked <strong>Top 1%</strong> on TryHackMe with 300+ completed labs and continuous hands‑on practice in
+      web, network, and Active Directory environments.
+    </p>
 
-      <div class="social" id="contact">
-        <a href="#"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
-        <a href="#"><i class="fa-brands fa-x-twitter"></i> X / Twitter</a>
-        <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a href="#"><i class="fa-brands fa-youtube"></i> YouTube</a>
-        <a href="#"><i class="fa-solid fa-cube"></i> Hack The Box</a>
-        <a href="#"><i class="fa-solid fa-terminal"></i> TryHackMe</a>
-      </div>
+    <div class="tags">
+      <span>Red Team</span>
+      <span>Penetration Testing</span>
+      <span>TryHackMe</span>
+      <span>CTFs</span>
+      <span>Web Security</span>
+      <span>Linux</span>
     </div>
 
-    <div class="card image-box">
-      <img src="profile.jpg" alt="Profile Image" />
+    <div class="social-icons">
+      <a href="#"><i class="fa-brands fa-github"></i></a>
+      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="#"><i class="fa-brands fa-twitter"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#"><i class="fa-brands fa-telegram"></i></a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="writeups" id="writeups">
-    <a href="writeups.html" class="writeup-card">
-      <h3>TryHackMe Write-ups</h3>
-      <p>Room solutions, methodology, and learning notes.</p>
-    </a>
+<!-- ===== Labs Section ===== -->
+<section id="labs">
+  <h2 style="color:#38bdf8; margin-bottom:25px;">Labs & Writeups</h2>
+  <div class="cards">
+    <div class="card" onclick="location.href='writeups.html'">
+      <h3>TryHackMe</h3>
+      <p>Hands-on labs & walkthroughs</p>
+    </div>
+    <div class="card">
+      <h3>Hack The Box</h3>
+      <p>Machines & challenges</p>
+    </div>
+    <div class="card">
+      <h3>General Writeups</h3>
+      <p>Notes & research</p>
+    </div>
+  </div>
+</section>
 
-    <a href="writeups.html" class="writeup-card">
-      <h3>Hack The Box Write-ups</h3>
-      <p>Machines, challenges, and exploitation paths.</p>
-    </a>
-
-    <a href="writeups.html" class="writeup-card">
-      <h3>General Write-ups</h3>
-      <p>Notes, research, and security concepts.</p>
-    </a>
-  </section>
-
-</main>
+<!-- ===== Contact Section ===== -->
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="social-icons" style="justify-content:center;">
+    <a href="#"><i class="fa-brands fa-github"></i></a>
+    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+    <a href="#"><i class="fa-brands fa-telegram"></i></a>
+  </div>
+</section>
 
 </body>
 </html>
