--- a/index.html
+++ b/index.html
@@ -3,45 +3,64 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Aladeb Ahmad | Red Team & Pentester</title>
+<title>Aladeb Ahmad | Red Team Portfolio</title>
 
-<!-- Font Awesome Icons -->
+<!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
 <style>
+/* ===== Global ===== */
 * { box-sizing: border-box; margin: 0; padding: 0; }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: #0f172a;
+  background: #0b0f14; /* dark black */
   color: #e5e7eb;
-  line-height: 1.6;
+  line-height: 1.7;
 }
 a { text-decoration: none; color: inherit; }
 
+.container {
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 24px;
+}
+
 /* ===== Header ===== */
 header {
+  position: sticky;
+  top: 0;
+  background: rgba(11,15,20,0.95);
+  border-bottom: 1px solid #111827;
+  z-index: 100;
+}
+.header-inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 8%;
-  position: sticky;
-  top: 0;
-  background: rgba(15,23,42,0.95);
-  z-index: 100;
+  height: 70px;
 }
-header h1 { font-size: 1.4rem; color: #38bdf8; }
+header h1 {
+  font-size: 1.3rem;
+  color: #e5e7eb;
+}
 nav a {
-  margin-left: 25px;
-  font-weight: 500;
-  cursor: pointer;
+  margin-left: 24px;
+  font-size: 0.95rem;
 }
-nav a:hover { color: #38bdf8; }
+nav a:hover { color: #22c55e; }
 
 /* ===== Sections ===== */
-section { padding: 70px 8%; }
+section { padding: 80px 0; }
 
-/* ===== Hero / About ===== */
-#about {
+.card {
+  background: #020617;
+  border-radius: 14px;
+  padding: 32px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+}
+
+/* ===== About ===== */
+#about-grid {
   display: grid;
   grid-template-columns: 280px 1fr;
   gap: 40px;
@@ -51,8 +70,8 @@ section { padding: 70px 8%; }
 .profile-img {
   width: 280px;
   height: 280px;
-  overflow: hidden;
   border-radius: 12px;
+  overflow: hidden;
 }
 .profile-img img {
   width: 100%;
@@ -60,146 +79,145 @@ section { padding: 70px 8%; }
   object-fit: cover;
 }
 
-.about-box {
-  background: #020617;
-  padding: 30px;
-  border-radius: 12px;
+.about-text h2 {
+  font-size: 1.6rem;
+  margin-bottom: 12px;
 }
-.about-box h2 { color: #38bdf8; margin-bottom: 10px; }
-.about-box p { margin-bottom: 15px; }
+.about-text p { margin-bottom: 18px; }
 
-/* ===== Tags ===== */
 .tags span {
   display: inline-block;
   background: #052e16;
   color: #22c55e;
-  padding: 6px 12px;
+  padding: 6px 14px;
   border-radius: 20px;
-  margin: 5px 6px 0 0;
+  margin: 6px 6px 0 0;
   font-size: 0.85rem;
 }
 
-/* ===== Social Icons ===== */
-.social-icons {
-  margin-top: 20px;
+/* ===== Contact ===== */
+#contact .card { margin-top: 40px; }
+#contact h2 { margin-bottom: 24px; }
+
+.social-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+.social-item {
   display: flex;
-  gap: 18px;
+  align-items: center;
+  gap: 14px;
+  font-size: 1.05rem;
 }
-.social-icons a {
-  font-size: 1.6rem;
-}
-.social-icons a:hover { transform: scale(1.1); }
+.social-item i { font-size: 1.6rem; }
 
 .fa-github { color: #e5e7eb; }
 .fa-linkedin { color: #0a66c2; }
-.fa-twitter { color: #1da1f2; }
+.fa-x-twitter { color: #1da1f2; }
 .fa-instagram { color: #e1306c; }
-.fa-telegram { color: #229ed9; }
+.fa-youtube { color: #ff0000; }
+.fa-terminal { color: #22c55e; }
 
-/* ===== Labs / Writeups ===== */
-#labs .cards {
+/* ===== Labs ===== */
+#labs h2 { margin-bottom: 30px; }
+.labs-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 25px;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 30px;
 }
-.card {
+.lab-card {
   background: #020617;
-  padding: 30px;
-  border-radius: 14px;
+  padding: 36px;
+  border-radius: 16px;
   text-align: center;
-  cursor: pointer;
   transition: 0.2s;
+  cursor: pointer;
 }
-.card:hover { transform: translateY(-6px); }
-.card h3 { color: #38bdf8; margin-bottom: 10px; }
-
-/* ===== Contact ===== */
-#contact { text-align: center; }
-#contact h2 { color: #38bdf8; margin-bottom: 20px; }
+.lab-card:hover { transform: translateY(-6px); }
+.lab-card h3 { margin-bottom: 10px; }
 
 /* ===== Responsive ===== */
 @media (max-width: 768px) {
-  #about {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-  .profile-img { margin: 0 auto; }
-  .social-icons { justify-content: center; }
+  #about-grid { grid-template-columns: 1fr; text-align: center; }
+  .profile-img { margin: auto; }
 }
 </style>
 </head>
 <body>
 
 <header>
-  <h1>Aladeb Ahmad</h1>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#labs">Labs</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <div class="container header-inner">
+    <h1>Aladeb Ahmad</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#labs">Labs</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<!-- ===== About Section ===== -->
+<!-- ===== About ===== -->
 <section id="about">
-  <div class="profile-img">
-    <img src="profile.jpg" alt="Profile Image" />
-  </div>
-
-  <div class="about-box">
-    <h2>Red Team & Penetration Tester</h2>
-    <p>
-      Offensive security practitioner focused on real‑world penetration testing and adversary simulation.
-      Ranked <strong>Top 1%</strong> on TryHackMe with 300+ completed labs and continuous hands‑on practice in
-      web, network, and Active Directory environments.
-    </p>
-
-    <div class="tags">
-      <span>Red Team</span>
-      <span>Penetration Testing</span>
-      <span>TryHackMe</span>
-      <span>CTFs</span>
-      <span>Web Security</span>
-      <span>Linux</span>
-    </div>
-
-    <div class="social-icons">
-      <a href="#"><i class="fa-brands fa-github"></i></a>
-      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="#"><i class="fa-brands fa-twitter"></i></a>
-      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#"><i class="fa-brands fa-telegram"></i></a>
+  <div class="container card">
+    <div id="about-grid">
+      <div class="profile-img">
+        <img src="profile.jpg" alt="Profile" />
+      </div>
+      <div class="about-text">
+        <h2>Red Team & Penetration Tester</h2>
+        <p>
+          I am a Red Team operator and penetration testing enthusiast focused on realistic, hands-on security testing.
+          I am ranked within the Top 1% on TryHackMe, with over 300 completed labs covering web exploitation, network attacks,
+          Linux systems, and Active Directory environments.
+        </p>
+        <p>
+          My approach is highly practical and methodology-driven, emphasizing adversary simulation, privilege escalation,
+          post-exploitation, and clear technical documentation through structured write-ups.
+        </p>
+        <div class="tags">
+          <span>Red Team</span><span>Penetration Testing</span><span>TryHackMe</span><span>Hack The Box</span>
+          <span>CTFs</span><span>Web Security</span><span>Linux</span><span>Active Directory</span>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 
-<!-- ===== Labs Section ===== -->
-<section id="labs">
-  <h2 style="color:#38bdf8; margin-bottom:25px;">Labs & Writeups</h2>
-  <div class="cards">
-    <div class="card" onclick="location.href='writeups.html'">
-      <h3>TryHackMe</h3>
-      <p>Hands-on labs & walkthroughs</p>
-    </div>
-    <div class="card">
-      <h3>Hack The Box</h3>
-      <p>Machines & challenges</p>
-    </div>
-    <div class="card">
-      <h3>General Writeups</h3>
-      <p>Notes & research</p>
-    </div>
-  </div>
-</section>
-
-<!-- ===== Contact Section ===== -->
+<!-- ===== Contact ===== -->
 <section id="contact">
-  <h2>Contact</h2>
-  <div class="social-icons" style="justify-content:center;">
-    <a href="#"><i class="fa-brands fa-github"></i></a>
-    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#"><i class="fa-brands fa-telegram"></i></a>
+  <div class="container card">
+    <h2>Contact & Platforms</h2>
+    <div class="social-list">
+      <div class="social-item"><i class="fa-brands fa-github"></i> GitHub</div>
+      <div class="social-item"><i class="fa-brands fa-linkedin"></i> LinkedIn</div>
+      <div class="social-item"><i class="fa-brands fa-x-twitter"></i> X (Twitter)</div>
+      <div class="social-item"><i class="fa-brands fa-instagram"></i> Instagram</div>
+      <div class="social-item"><i class="fa-brands fa-youtube"></i> YouTube</div>
+      <div class="social-item"><i class="fa-solid fa-terminal"></i> TryHackMe</div>
+      <div class="social-item"><i class="fa-solid fa-terminal"></i> Hack The Box</div>
+    </div>
+  </div>
+</section>
+
+<!-- ===== Labs ===== -->
+<section id="labs">
+  <div class="container">
+    <h2>Labs & Writeups</h2>
+    <div class="labs-grid">
+      <div class="lab-card" onclick="location.href='writeups.html'">
+        <h3>TryHackMe Writeups</h3>
+        <p>Completed rooms & walkthroughs</p>
+      </div>
+      <div class="lab-card">
+        <h3>Hack The Box Writeups</h3>
+        <p>Machines and challenges</p>
+      </div>
+      <div class="lab-card">
+        <h3>General Writeups</h3>
+        <p>Research & notes</p>
+      </div>
+    </div>
   </div>
 </section>
 
