--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
   <!-- SIDEBAR -->
   <aside class="sidebar">
     <div class="profile">
-      <img src="profile.jpg" alt="Profile" />
-      <h2>Aladeb Ahmad</h2>
+      <img src="assets/images/luffy.jpg" alt="Profile" />
+      <h2>Aladeb ali</h2>
       <p>Red Team / Pentester</p>
     </div>
 
@@ -222,6 +222,15 @@
             <h3>HackTheBox Artificial</h3>
             <p>Full machine writeup covering enumeration, exploitation and privilege escalation.</p>
             <div class="card-meta">HTB · Linux</div>
+          </div>
+          <div class="card-img">HTB</div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
+            <h3>HackTheBox ali</h3>
+            <p>Full machine writeup covering enumeration, exploitation and privilege escalation.</p>
+            <div class="card-meta">THM · Linux . web </div>
           </div>
           <div class="card-img">HTB</div>
         </div>
